# Computational-ML-lab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CV_GRADE_IMPROVEMENTS.md  MLFLOW_CLEANUP_COMPLETION.md  MLFLOW_CLEANUP_SUMMARY.md  Makefile  README.md  RUNNER_IMPLEMENTATION.md  TERMINAL_FIX_GUIDE.md  conftest.py  mkdocs.yml  mlflow.db  pyproject.toml  quick_test_module01.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
data/: README.md
docs/: contributing.md  index.md
docs/getting-started/: mlflow-tracking.md  module-structure.md  python312-imports.md  setup.md
docs/modules/: overview.md
modules/: __init__.py  _import_helper.py  run.py
modules/00_repo_standards/: IMPLEMENTATION_SUMMARY.md  README.md  create_module.py  quick_test.py  run_demo.py
modules/00_repo_standards/configs/: example.yaml
modules/00_repo_standards/reports/: config.yaml  experiment_results.yaml  metrics.json
modules/00_repo_standards/src/: __init__.py  core.py  demo_experiment.py  main.py  utils.py
modules/00_repo_standards/tests/: __init__.py  test_config.py  test_core.py  test_demo_experiment.py  test_integration.py  test_seeding.py  test_utils.py
modules/01_numerical_toolbox/: COMPLETION_CHECKLIST.md  README.md
modules/01_numerical_toolbox/configs/: example_optimizer.yaml
modules/01_numerical_toolbox/experiments/: README.md  __init__.py  optimizer_benchmark.py
modules/01_numerical_toolbox/notebooks/: 01_conditioning_and_scaling.ipynb  02_gradient_descent_dynamics.ipynb  02_pca_explained_variance.ipynb  03_ridge_as_numerical_stabilizer.ipynb  04_svd_pca_geometry.ipynb  05_autodiff_mini_demo.ipynb
modules/01_numerical_toolbox/src/: __init__.py  linear_algebra.py  optimizers_from_scratch.py  toy_problems.py
modules/01_numerical_toolbox/tests/: test_linear_algebra.py  test_optimizers.py  test_toy_problems.py
modules/02_stat_inference_uq/: README.md
modules/02_stat_inference_uq/experiments/: __init__.py  uq_classification_comparison.py
modules/02_stat_inference_uq/src/: __init__.py  calibration.py  (+3 more)
modules/03_ml_tabular_foundations/: EXPERIMENT_REPORT.md  MODEL_CARD.md  NOTEBOOK_QUICKSTART.md  README.md  quick_start.sh
modules/04_time_series_state_space/: IMPLEMENTATION_SUMMARY.md  MODULE_04_COMPLETE.md  README.md  quick_start.sh
modules/05_simulation_monte_carlo/: README.md
modules/06_deep_learning_systems/: README.md  __init__.py  quick_test.py
modules/07_physics_informed_ml/: README.md
scripts/: clean_artifacts.sh  commit_mlflow_cleanup.sh  fix_and_commit.sh  verify_mlflow_cleanup.sh
(+117 files in other folders)
